# UAV-Thread-Detection-And-Neutralization

./: .gitignore  LICENSE  README.md
src/pocs/poc1_landing_world/: CMakeLists.txt  package.xml
src/pocs/poc1_landing_world/launch/: world.launch.py
src/pocs/poc1_landing_world/models/landing_pad_0/: model.config  model.sdf
src/pocs/poc1_landing_world/models/landing_pad_0/materials/scripts/: tag.material
src/pocs/poc1_landing_world/models/landing_pad_1/: model.config  model.sdf
src/pocs/poc1_landing_world/models/landing_pad_1/materials/scripts/: tag.material
src/pocs/poc1_landing_world/src/: mission_control.py
src/pocs/poc1_landing_world/worlds/: landing_mission.world
